--- a/package.json
+++ b/package.json
@@ -9,12 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/marked": "^4.0.8",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
+    "codemirror": "^6.0.1",
+    "dompurify": "^3.0.1",
+    "dotenv": "^16.0.3",
+    "easymde": "^2.18.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simplemde-editor": "^5.2.0",
+    "react-toastify": "^9.1.2",
+    "simplemde": "^1.11.2",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/simplemde": "^1.11.8",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
