--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "antd": "^5.4.7",
     "axios": "^1.3.5",
     "codemirror": "^6.0.1",
     "dompurify": "^3.0.1",
     "dotenv": "^16.0.3",
     "easymde": "^2.18.0",
+    "eslint-config-next": "^13.4.2",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "next": "13.2.4",
+    "next": "^13.4.2",
     "next-auth": "^4.22.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^9.1.2",
     "simplemde": "^1.11.2",
